# AI_Agent

./: SimpleAgent.py  api.py  requirements.txt
AI_Agent-0.0.1/: pyproject.toml
langchain-ai-agent-v0.0.1/: main.py  pyproject.toml  requirements.txt
langchain-ai-agent-v0.0.1/models/: request_models.py
langchain-ai-agent-v0.0.1/routes/: health.py  query.py
langchain-ai-agent-v0.0.1/services/: llm_service.py
openai-ai-agent-v0.0.2/: main.py  pyproject.toml  requirements.txt
openai-ai-agent-v0.0.2/models/: __init__.py  request_models.py
openai-ai-agent-v0.0.2/routes/: query.py
openai-ai-agent-v0.0.2/services/: llm_service.py
personal-ai-assistant/: .gitignore  main.py  requirements.txt
personal-ai-assistant/assistant/: agent.py  llm.py
personal-ai-assistant/auth/: google_auth.py  outlook_auth.py
personal-ai-assistant/tools/: calendar_tool.py  gmail_tool.py  outlook_calendar.py  outlook_mail.py  tools.py
rag-agent-v0.0.2/: main.py  pyproject.toml  requirements.txt
rag-agent-v0.0.2/src/: ingest.py  rag.py
