[project]
name = "rag-agent-v0-0-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.2",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.3",
    "langchain-pymupdf4llm>=0.5.0",
    "pymupdf>=1.28.0",
    "pymupdf4llm<1.28.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
